--- a/Pages/About.html
+++ b/Pages/About.html
@@ -7,7 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../about.css" />
+    <link rel="stylesheet" href="/Styles/about.css" />
     <style>
       .navbarcustom {
         background-color: burlywood;
@@ -21,10 +21,10 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="../Home.html">Home</a>
+              <a class="nav-link" href="./Home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Services.html">Services</a>
+              <a class="nav-link" href="./Services.html">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
