--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -7,7 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="/Styles/style.css" />
      <style>
       .navbarcustom {
         background-color: burlywood;
@@ -25,10 +25,10 @@
                 <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../Services.html">Services</a>
+                <a class="nav-link" href="./Services.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../About.html">About</a>
+                <a class="nav-link" href="./About.html">About</a>
               </li>
             </ul>
           </div>
@@ -46,7 +46,7 @@
         autoplay
         muted
         class="video"
-        src="Funnymonke.mp4"
+        src="/Media/Funnymonke.mp4"
         type="video/mp4"
       ></video>
        <h2 class="promotext">
