--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -7,7 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="services.css" />
+    <link rel="stylesheet" href="/Styles/services.css" />
     <style>
       .navbarcustom {
         background-color: burlywood;
@@ -21,13 +21,13 @@
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="../Home.html">Home</a>
+              <a class="nav-link" href="./Home.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../About.html">About</a>
+              <a class="nav-link" href="./About.html">About</a>
             </li>
           </ul>
         </div>
@@ -46,7 +46,6 @@
       <ul id="cart-items"></ul>
       <p>Total: <span id="cart-total">0</span> Bananas</p>
     </div>
-    <script src="Shop.js"></script>
-    <script src="services.js"></script>
+    <script src="/Styles/Shop.js"></script>
   </body>
 </html>
