--- a/Pages/About.html
+++ b/Pages/About.html
@@ -7,7 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/Styles/about.css" />
+    <link rel="stylesheet" href="/Labb1_EricF/Styles/about.css" />
     <style>
       .navbarcustom {
         background-color: burlywood;
