--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -7,7 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/Styles/style.css" />
+    <link rel="stylesheet" href="/Labb1_EricF/Styles/style.css" />
      <style>
       .navbarcustom {
         background-color: burlywood;
