--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -7,7 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/Styles/services.css" />
+    <link rel="stylesheet" href="/Labb1_EricF/Styles/services.css" />
     <style>
       .navbarcustom {
         background-color: burlywood;
@@ -46,6 +46,6 @@
       <ul id="cart-items"></ul>
       <p>Total: <span id="cart-total">0</span> Bananas</p>
     </div>
-    <script src="/Styles/Shop.js"></script>
+    <script src="/Labb1_EricF/Styles/Shop.js"></script>
   </body>
 </html>
