--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -46,7 +46,7 @@
         autoplay
         muted
         class="video"
-        src="/Media/Funnymonke.mp4"
+        src="/Labb1_EricF/Media/Funnymonke.mp4"
         type="video/mp4"
       ></video>
        <h2 class="promotext">
